--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -1,5 +1,5 @@
 //Background Images
-
+/*
 .slide-1 {
   background-image: url('../assets/cigi-campus-min.jpg');
 }
@@ -31,7 +31,7 @@
 .slide-8 {
   background-image: url('../assets/G20-min.jpg');
 }
-
+*/
 .fullscreen-bg {
   bottom: 0;
   left: 0;
@@ -89,6 +89,11 @@
 
 }
 
+.joint-message{
+  h3{
+    display: none;
+  }
+}
 .cover-slide {
   h1,
   h2,
