--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
   {% js main_head %}
-  <script src="https://use.typekit.net/rhe5qdp.js"></script>
+  <script src="https://use.typekit.net/cab1mhe.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
