--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -1,8 +1,9 @@
-<section class="vh-100 standard-slide slide-2">
+<section class="vh-100 joint-message cover-slide slide-2">
   <div class="wrapper h-100">
-    <div class="absolute bottom-0 pb4 pr4 pb6-ns w-60-l">
+    <div class="flex flex-column center w-100 w-80-m pt6-m pt6-ns">
+     
       {% markdown template_content/slide2.md %}
-      <a href="#" class="no-underline inline-flex items-center br-pill bg-accent-color pv2 ph3 mt3 white dib pointer underline-hover">View Full Article</a>
+
     </div>
   </div>
 </section>
