--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -7,7 +7,7 @@
     {% include header.html %}
     <div class="smooth-slide-container">
       {% include timeline.html %}
-      {% include cover.html %}
+      {% include home.html %}
       {% include slide2.html %}
       {% include slide3.html %}
       {% include slide4.html %}
@@ -15,6 +15,7 @@
       {% include slide6.html %}
       {% include slide7.html %}
       {% include slide8.html %}
+      {% include slide9.html %}
       {% include video.html %}
 
       {% js main_body_end %}
