Gallery, and Javascript fallback

--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -109,8 +109,7 @@ hr {
 
   @include media-query($on-laptop) {
     max-width: calc(#{$content-width} - (#{$spacing-unit}));
-    padding-left: $spacing-unit / 2;
-    padding-right: $spacing-unit / 2;
+    padding: 0;
   }
 }
 
