--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -6,5 +6,36 @@
 //Import Partials
 
 @import 'custom/timeline';
+@import 'custom/gallery';
 @import 'custom/navigation';
 @import 'custom/slides';
+
+// Fonts
+
+@font-face {
+  font-family: 'futura-pt';
+  font-style: normal;
+  font-weight: 300;
+  src: url('https://use.typekit.net/af/5da6f6/000000000000000000010096/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3') format('woff2'), url('https://use.typekit.net/af/5da6f6/000000000000000000010096/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3') format('woff'), url('https://use.typekit.net/af/5da6f6/000000000000000000010096/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3') format('opentype');
+}
+
+@font-face {
+  font-family: 'futura-pt';
+  font-style: normal;
+  font-weight: 400;
+  src: url('https://use.typekit.net/af/3489f3/000000000000000000013365/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3') format('woff2'), url('https://use.typekit.net/af/3489f3/000000000000000000013365/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3') format('woff'), url('https://use.typekit.net/af/3489f3/000000000000000000013365/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3') format('opentype');
+}
+
+@font-face {
+  font-family: 'futura-pt';
+  font-style: normal;
+  font-weight: 500;
+  src: url('https://use.typekit.net/af/069586/00000000000000000001008f/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3') format('woff2'), url('https://use.typekit.net/af/069586/00000000000000000001008f/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3') format('woff'), url('https://use.typekit.net/af/069586/00000000000000000001008f/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3') format('opentype');
+}
+
+@font-face {
+  font-family: 'futura-pt';
+  font-style: normal;
+  font-weight: 700;
+  src: url('https://use.typekit.net/af/e9d809/000000000000000000010091/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3') format('woff2'), url('https://use.typekit.net/af/e9d809/000000000000000000010091/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3') format('woff'), url('https://use.typekit.net/af/e9d809/000000000000000000010091/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3') format('opentype');
+}
