--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,8 +13,11 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
   {% js main_head %}
+
+  {% comment %}
   <script src="https://use.typekit.net/rhe5qdp.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
+  {% endcomment %}
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
