--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -3,12 +3,12 @@
 
   {% include head.html %}
 
-  <body class="overflow-hidden">
+  <body>
     {% include header.html %}
     <div class="smooth-slide-container">
       {% include timeline.html %}
       {% include cover.html %}
-      {% include slide2.html %}
+      {% include gallery.html %}
       {% include slide3.html %}
       {% include slide4.html %}
       {% include slide5.html %}
