--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -103,7 +103,8 @@ hr {
 .wrapper {
   margin-left: auto;
   margin-right: auto;
-  max-width: calc(#{$content-width} - (#{$spacing-unit} * 2));
+  //max-width: calc(#{$content-width} - (#{$spacing-unit} * 2));
+  max-width: 61.25rem;
   padding-left: $spacing-unit;
   padding-right: $spacing-unit;
 
@@ -138,8 +139,8 @@ hr {
   color: $text-color;
 }
 
-.w-5rem-10vh {
-  width: calc(5rem + 10vh);
+.w-3rem-10vh {
+  width: calc(3rem + 10vh);
 }
 
 .w4 {
