--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -50,10 +50,29 @@
   width: 100%;
 }
 
+.tabs{
+  text-align: right;
+}
+
+.col{
+  flex: 100%;
+  
+}
+
+
 @media (min-aspect-ratio: 16/9) {
   .fullscreen-bg-video {
     height: 300%;
     top: -100%;
+  }
+  .col{
+    flex: 50%;
+  }
+  .col-1{
+    padding-right: 2.5%;
+  }
+  .col-2{
+    padding-left:  2.5%;
   }
 }
 
@@ -94,17 +113,21 @@
     display: none;
   }
 }
+
+section{
+  z-index: 2;
+}
 .cover-slide {
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p {
-    position: relative;
-    z-index: 2;
-  }
+//   h1,
+//   h2,
+//   h3,
+//   h4,
+//   h5,
+//   h6,
+//   p {
+//     position: relative;
+//     z-index: 2;
+//   }
 
   h1 {
     text-align: center;
@@ -121,15 +144,15 @@
 
 }
 
-.cover-slide::before,
-.standard-slide::before {
-  background: linear-gradient(rgba(242, 240, 234, 0.15), rgba(242, 240, 234, 0.875));
-  content: ' ';
-  display: block;
-  height: 100%;
-  left: 0;
-  opacity: 1;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
+// .cover-slide::before,
+// .standard-slide::before {
+//   background: linear-gradient(rgba(242, 240, 234, 0.15), rgba(242, 240, 234, 0.875));
+//   content: ' ';
+//   display: block;
+//   height: 100%;
+//   left: 0;
+//   opacity: 1;
+//   position: absolute;
+//   top: 0;
+//   width: 100%;
+// }
