--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -1,8 +1,8 @@
 <section class="vh-100 joint-message cover-slide slide-2">
   <div class="wrapper h-100">
-    <div class="flex flex-column center w-100 w-80-m pt6-m pt6-ns">
+    <div class="flex center flex-column w-100 pt5 pt6-ns">
      
-      {% markdown template_content/slide2.md %}
+      {% markdown template_content/slide2-intro.md %}
 
     </div>
   </div>
