--- a/_includes/slide3.html
+++ b/_includes/slide3.html
@@ -1,22 +1,26 @@
 <section class="vh-100 joint-message standard-slide slide-3">
   <div class="wrapper h-100">
-      <div class="flex flex-column center w-100 w-80-m w-40-ns pt4 pt5-m pt6-ns">
-      {% markdown template_content/slide3.md %}
-      <p>Trust is fundamental for a think tank. But as we know from following the accounts, and accusations, of “fake news” by political leaders and others, trust is difficult to build and maintain but easy to lose.</p>
-      
-      <p>When we embarked on rebranding CIGI in late 2016, we did so by focusing on our core competencies – research, expertise and analysis – with an eye toward presenting and communicating our work in new ways. </p>
-      
-      <p>CIGI’s new identity, launched with a new website, tells a story about who we are as an organization: an innovative global think tank that delivers influential research and trusted analysis. We underline, in contrast to “fake news,” the role of CIGI as a trustworthy source of information and insight.</p>
-      
-      <p>The success stories featured in this annual report, itself an example of the innovation we are cultivating at CIGI, collectively tell a story of the product of in-depth research, studied expertise and timely analysis: informed dialogue with decision makers and meaningful public discourse.</p>
-      
-      <p>Our World Refugee Council, led by former Canadian Foreign Minister Lloyd Axworthy, brings together the best and brightest refugee experts, former presidents and prime ministers, civil society leaders, a Nobel Peace Prize laureate and others to bring bold thinking and new research to this global problem.</p>
-
-      <p>New books captured the preoccupations of our times. Look Who’s Watching: Surveillance, Treachery and Trust Online and Laid Low: Inside the Crisis that Overwhelmed Europe and IMF tell troubling tales and yet are nevertheless optimistic about the future.</p>
-      
-      <p>And at the Global Think Tank Summit CIGI hosted in September 2016 with the Think Tanks and Civil Societies Program at the Lauder Institute of the University of Pennsylvania, we pursued conversations focused on threats posed by populist movements to global institutions.</p>
-      
-      <p>Public uncertainty and distrust of our institutions has demonstrated the need to bring clarity and innovative thinking to global policy making. As a non-partisan, independent think tank, CIGI is positioned as a credible, trustworthy place to find answers.</p>
-    </div>
+        <div class="flex flex-column w-100 w-80-m pt5 pt6-ns">
+            <div class="tabs">
+                <div class="di">President's Message</div>
+                <div class="di">Chair's Message</div>
+            </div>
+            {% markdown template_content/slide3-president.md %}
+        </div>
+        <div class="flex flex-row flex-wrap">
+        
+            
+                <div class="col col-1">
+                    
+                    <p>Trust is fundamental for a think tank. But as we know from following the accounts, and accusations, of “fake news” by political leaders and others, trust is difficult to build and maintain but easy to lose.</p>
+                </div>
+                <div class="col col-2">
+                    <p>When we embarked on rebranding CIGI in late 2016, we did so by focusing on our core competencies – research, expertise and analysis – with an eye toward presenting and communicating our work in new ways. </p>
+                </div>
+            
+         
+            
+        
+        </div>
   </div>
 </section>
