--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -114,3 +114,25 @@
     padding-left: 3px;
   }
 }
+
+.loading {
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.spinner {
+  animation: rotate 1s linear infinite;
+  left: 50%;
+  position: absolute;
+  top: 50%;
+}
+
+@keyframes rotate {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
