--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -14,7 +14,13 @@
     <p>
       Lorem ipsum dolor sit amet
     </p>
-    <div class="mt5 h-50 gallery" id="gallery">
+    <div class="mt5 h-50 gallery relative" id="gallery">
+      <div class="w-100 h-100 z-1 bg-black-70 absolute" id="load-overlay">
+        <svg class="spinner" width="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#fff" stroke-width="10">
+          <path d="M 50 5 A 45 45 0 1 1 5 50">
+          </path>
+        </svg>
+      </div>
       <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/800/450?image=1011'/>
       <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/600/850?image=11'/>
       <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/850?image=1075'/>
