--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -28,9 +28,22 @@ $content-width: 95%;
 
 // Reset some basic elements
 
-body, h1, h2, h3, h4, h5, h6,
-p, blockquote, pre, hr,
-dl, dd, ol, ul, figure {
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+hr,
+dl,
+dd,
+ol,
+ul,
+figure {
   margin: 0;
   padding: 0;
 }
