Major refactor, improved performance, load second slide by default

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,4 +1,4 @@
-<section class="vh-100 timeline-background relative">
+<section class="vh-100 default-background relative">
   <script src="https://unpkg.com/packery@2/dist/packery.pkgd.min.js"></script>
   <div class="wrapper h-100 flex flex-column relative">
     <main class="w-100 mt6-ns mt4 flex justify-between items-center" aria-label="CIGI">
