--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -1,4 +1,4 @@
-<section class="vh-100 timeline-background relative">
+<section class="vh-100 default-background relative overflow-hidden">
   <div class="wrapper h-100 flex flex-column relative">
     <main class="w-100 mt6-ns mt4 flex justify-between" aria-label="CIGI">
       {% markdown template_content/timeline.md %}
@@ -41,7 +41,7 @@
       </p>
       <a href="#" class="no-underline inline-flex items-center br-pill bg-accent-color pv2 ph3 mt3 white dib pointer underline-hover">Download PDF Version</a>
     </noscript>
-    <div class="w-100 flex flex-auto overflow-hidden" aria-label="Timeline">
+    <div class="w-100 flex flex-auto" aria-label="Timeline">
       <div class="relative w-100 self-center" id="timeline-root"></div>
     </div>
   </div>
