--- a/_includes/slide4.html
+++ b/_includes/slide4.html
@@ -1,8 +1,32 @@
-<section class="vh-100 joint-message standard-slide slide-4">
-  <div class="wrapper h-100">
-    <div class="absolute bottom-0 pb4 pr4 pb6-ns w-60-l">
-      {% markdown template_content/slide4.md %}
- 
-    </div>
-  </div>
-</section>
+<section class="vh-100 joint-message standard-slide" id="slide-4">
+        <div class="wrapper h-100">
+            <div class="flex center flex-column w-100 pt5 pt6-ns">
+                <div class="tabs">
+                    <div class="di tab toggle" data-id="tab-1">President's Message</div>
+                    <div class="di tab toggle" data-id="tab-2">Chair's Message</div>
+                </div>
+                <div class="tab-content">
+                        <div class="tab" data-id="tab-1" name="president">
+                            {% markdown template_content/slide4.md %}
+                            <div class="col col-1">    
+                                <p>Trust is fundamental for a think tank. But as we know from following the accounts, and accusations, of “fake news” by political leaders and others, trust is difficult to build and maintain but easy to lose.</p>
+                            </div>
+                            <div class="col col-2">
+                                <p>When we embarked on rebranding CIGI in late 2016, we did so by focusing on our core competencies – research, expertise and analysis – with an eye toward presenting and communicating our work in new ways. </p>
+                            
+                            </div>
+                        </div>  
+                        <div class="tab" data-id="tab-2" name="chair">
+                            {% markdown template_content/slide4.md %}
+                            <div class="col col-1">        
+                                <p>When we embarked on rebranding CIGI in late 2016, we did so by focusing on our core competencies – research, expertise and analysis – with an eye toward presenting and communicating our work in new ways. </p>
+                            </div>
+                            <div class="col col-2">
+                                <p>When we embarked on rebranding CIGI in late 2016, we did so by focusing on our core competencies – research, expertise and analysis – with an eye toward presenting and communicating our work in new ways. </p>
+                            </div>
+                        </div>
+                    </div> 
+            </div>
+      </div>
+    </section>
+    
