--- a/_includes/slide3.html
+++ b/_includes/slide3.html
@@ -1,26 +1,31 @@
-<section class="vh-100 joint-message standard-slide slide-3">
-  <div class="wrapper h-100">
-        <div class="flex flex-column w-100 w-80-m pt5 pt6-ns">
+<section class="vh-100 joint-message standard-slide" id="slide-3">
+    <div class="wrapper h-100">
+        <div class="flex center flex-column w-100 pt5 pt6-ns">
             <div class="tabs">
-                <div class="di">President's Message</div>
-                <div class="di">Chair's Message</div>
+                <div class="di tab toggle" data-id="tab-1">President's Message</div>
+                <div class="di tab toggle" data-id="tab-2">Chair's Message</div>
             </div>
-            {% markdown template_content/slide3-president.md %}
-        </div>
-        <div class="flex flex-row flex-wrap">
-        
-            
-                <div class="col col-1">
+            <div class="tab-content">
+                <div class="tab" data-id="tab-1" name="president">
+                    {% markdown template_content/slide3-president.md %}
+                    <div class="col col-1">    
+                        <p>Trust is fundamental for a think tank. But as we know from following the accounts, and accusations, of “fake news” by political leaders and others, trust is difficult to build and maintain but easy to lose.</p>
+                    </div>
+                    <div class="col col-2">
+                        <p>When we embarked on rebranding CIGI in late 2016, we did so by focusing on our core competencies – research, expertise and analysis – with an eye toward presenting and communicating our work in new ways. </p>
                     
-                    <p>Trust is fundamental for a think tank. But as we know from following the accounts, and accusations, of “fake news” by political leaders and others, trust is difficult to build and maintain but easy to lose.</p>
+                    </div>
+                </div>  
+                <div class="tab" data-id="tab-2" name="chair">
+                    {% markdown template_content/slide3-chair.md %}
+                    <div class="col col-1">        
+                        <p>When we embarked on rebranding CIGI in late 2016, we did so by focusing on our core competencies – research, expertise and analysis – with an eye toward presenting and communicating our work in new ways. </p>
+                    </div>
+                    <div class="col col-2">
+                        <p>When we embarked on rebranding CIGI in late 2016, we did so by focusing on our core competencies – research, expertise and analysis – with an eye toward presenting and communicating our work in new ways. </p>
+                    </div>
                 </div>
-                <div class="col col-2">
-                    <p>When we embarked on rebranding CIGI in late 2016, we did so by focusing on our core competencies – research, expertise and analysis – with an eye toward presenting and communicating our work in new ways. </p>
-                </div>
-            
-         
-            
-        
+            </div> 
         </div>
   </div>
 </section>
