--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -70,6 +70,7 @@
   background: #000;
   border: 1px solid #fff;
   border-radius: 50%;
+  color: #fff;
   display: flex;
   height: 1.5rem;
   justify-content: center;
