--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,6 @@
   <div class="flex mt3 mt0-ns">
     <div class="f4"><a class="no-underline black" id="global-share-facebook" target="_blank"><i class="fa fa-facebook"></i></a></div>
     <div class="f4 pl1 ml3"><a class="no-underline black" id="global-share-twitter" target="_blank"><i class="fa fa-twitter"></i></a></div>
-    <div id="table-of-contents-button" class="pt1 pl1 ml3 pointer black"></div>
+    <div id="table-of-contents-button" class="pt1 pl1 ml3 pointer white"></div>
   </div>
 </header>
