remove id from tag-toggles

--- a/_includes/slide3.html
+++ b/_includes/slide3.html
@@ -1,7 +1,7 @@
 <section class="vh-100 joint-message standard-slide" id="slide-3">
     <div class="wrapper h-100">
         <div class="flex center flex-column w-100 pt5 pt6-ns">
-            <div id ="tab-toggles" class="tabs">
+            <div class="tabs">
                 <div class="tab toggle" data-id="tab-1">President's Message</div>
                 <div class="tab toggle" data-id="tab-2">Chair's Message</div>
             </div>
