--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -1,5 +1,5 @@
 <section class="vh-100 default-background relative overflow-hidden">
-  <div class="h-100 flex flex-column relative">
+  <div class="h-100 flex flex-column relative" id="timeline-slide-content">
     <main class="wrapper w-100 mt6-ns mt4 flex justify-between" aria-label="CIGI">
       {% markdown template_content/timeline.md %}
       <div id="user-hint-1" class="user-select-none">
