--- a/_includes/slide3.html
+++ b/_includes/slide3.html
@@ -1,49 +1,44 @@
 <section class="vh-100 joint-message standard-slide" id="slide-3">
-    <div class="wrapper h-100">
-        <div class="flex center flex-column w-100 pt5 pt6-ns">
-            <div id ="tab-toggles" class="tabs">
-                <div class="tab toggle" data-id="tab-1">President's Message</div>
-                <div class="tab toggle" data-id="tab-2">Chair's Message</div>
-            </div>
-            <div class="tab-content">
-                <div class="tab" data-id="tab-1" name="president">
-                    {% markdown template_content/slide3-president.md %}
-                    <div class="col col-1">
-                        <p><span>T</span>rust is fundamental for a think tank. But as we know from following the accounts, and accusations, of “fake news” by political leaders and others, trust is difficult to build and maintain but easy to lose.</p>
-                        <p>When we embarked on rebranding CIGI in late 2016, we did so by focusing on our core competencies – research, expertise and analysis – with an eye toward presenting and communicating our work in new ways. </p>
-                        <p>CIGI’s new identity, launched with a new website, tells a story about who we are as an organization: an innovative global think tank that delivers influential research and trusted analysis. We underline, in contrast to “fake news,” the role of CIGI as a trustworthy source of information and insight.</p>
-                        <p>The success stories featured in this annual report, itself an example of the innovation we are cultivating at CIGI, collectively tell a story of the product of in-depth research, studied expertise and timely analysis: informed dialogue with decision makers and meaningful public discourse.</p>
-                        <p>Our World Refugee Council, led by former Canadian Foreign Minister Lloyd Axworthy, brings together the best and brightest refugee experts, former presidents and prime ministers, civil society leaders, a Nobel Peace Prize laureate and others to bring bold thinking and new research to this global problem.</p>
-                    </div>
-                    <div class="col col-2">
-                        <p>New books captured the preoccupations of our times. Look Who’s Watching: Surveillance, Treachery and Trust Online and Laid Low: Inside the Crisis that Overwhelmed Europe and IMF tell troubling tales and yet are nevertheless optimistic about the future.</p>
-                        <p>And at the Global Think Tank Summit CIGI hosted in September 2016 with the Think Tanks and Civil Societies Program at the Lauder Institute of the University of Pennsylvania, we pursued conversations focused on threats posed by populist movements to global institutions.</p>
-                        <p>Public uncertainty and distrust of our institutions has demonstrated the need to bring clarity and innovative thinking to global policy making. As a non-partisan, independent think tank, CIGI is positioned as a credible, trustworthy place to find answers.</p>
-                    <div><img src="{{ "/assets/MedhoraSignature.png" | relative_url }}" alt="signature"></div>
-                    <p class="signature">Rohinton P. Medhora<br>
-                    President, CIGI</p>
-                    </div>
-                </div>
-                <div class="tab" data-id="tab-2" name="chair">
-                    {% markdown template_content/slide3-chair.md %}
-                    <div class="col col-1">
-                        <p><span>T</span>he global economy is increasingly shifting from the delivery of goods and services to an international commerce in ideas and yet policies and incentives have not always kept up with the transition. A new approach to stimulating innovation in Canada and abroad is necessary.</p>
-                        <p>Over the past year, CIGI has put a spotlight on this issue, tackling questions around innovation policies and strategies with expertise, analysis and research. CIGI’s “New Thinking on Innovation” series, launched in the spring, breathed new life into discussions and will continue to influence policy in Ottawa and elsewhere.</p>
-                        <p>In the series, corporate leaders, economists and trade and international law experts brought perspective and specific policy recommendations for international trade deals, patent systems and intellectual property strategies, and the role global institutions like the Group of Twenty can play in supporting innovation among smaller countries.</p>
-                        <p>Among others, we heard from business leaders like Neil Desai and Benjamin Bergen as well as legal experts Michael Geist and new CIGI Senior Fellow E. Richard Gold. In a November 2016 event and through a series of resulting video interviews, Gold also looked beyond technology to the main driver of innovation: people and the societal contexts that foster their successful innovations.</p>
-                        <p>CIGI’s responses to constantly evolving issues like innovation represent an organizational approach that builds on research but looks for practical and timely results. Two examples are revealing. Through a partnership with York University, ILRP is working with the IP Osgoode Innovation Clinic to give new entrepreneurs and innovators access to free legal clinics to help them navigate complex, and costly, intellectual property systems.</p>
-                    </div>
-                    <div class="col col-2">
-
-                        <p>In the policy arena, CIGI responded quickly to the announcement of NAFTA renegotiations by publishing a series of original pieces on NAFTA and the Knowledge Economy. CIGI experts simultaneously participated in discussions with Canadian government officials looking for a road map on trade, innovation and intellectual property under a NAFTA 2.0.</p>
-                        <p>Independent, peer-reviewed research accompanied by timely and in-depth analysis, multimedia interviews and explanatory pieces demonstrate CIGI’s commitment to meeting the needs of today’s decision makers while also reaching new audiences.</p>
-                        <p>The continued support of our many global and local partners – and especially from the Governments of Canada and Ontario, and the City of Waterloo – is paramount to ensuring CIGI’s ongoing success as a relevant and innovative Canadian think tank with a global perspective.</p>
-                        <div><img src="{{ "/assets/BalsillieSignature.png" | relative_url }}" alt="signature"></div>
-                        <p class="signature">Jim Balsillie<br>
-                        Chair, CIGI Board of Directors</p>
-                    </div>
-                </div>
-            </div>
+  <div class="wrapper h-100">
+    <div id="tab-toggles" class="flex center flex-column w-100 pt5 pt6-ns">
+      <div class="tabs">
+        <div class="tab toggle" data-id="tab-1">President's Message</div>
+        <div class="tab toggle" data-id="tab-2">Chair's Message</div>
+      </div>
+      <div class="tab-content">
+        <div class="tab" data-id="tab-1" name="president">
+          {% markdown template_content/slide3-president.md %}
+          <div class="col">
+            <p><span>T</span>rust is fundamental for a think tank. But as we know from following the accounts, and accusations, of “fake news” by political leaders and others, trust is difficult to build and maintain but easy to lose.</p>
+            <p>When we embarked on rebranding CIGI in late 2016, we did so by focusing on our core competencies – research, expertise and analysis – with an eye toward presenting and communicating our work in new ways. </p>
+            <p>CIGI’s new identity, launched with a new website, tells a story about who we are as an organization: an innovative global think tank that delivers influential research and trusted analysis. We underline, in contrast to “fake news,” the role of CIGI as a trustworthy source of information and insight.</p>
+            <p>The success stories featured in this annual report, itself an example of the innovation we are cultivating at CIGI, collectively tell a story of the product of in-depth research, studied expertise and timely analysis: informed dialogue with decision makers and meaningful public discourse.</p>
+            <p>Our World Refugee Council, led by former Canadian Foreign Minister Lloyd Axworthy, brings together the best and brightest refugee experts, former presidents and prime ministers, civil society leaders, a Nobel Peace Prize laureate and others to bring bold thinking and new research to this global problem.</p>
+            <p>New books captured the preoccupations of our times. Look Who’s Watching: Surveillance, Treachery and Trust Online and Laid Low: Inside the Crisis that Overwhelmed Europe and IMF tell troubling tales and yet are nevertheless optimistic about the future.</p>
+            <p>And at the Global Think Tank Summit CIGI hosted in September 2016 with the Think Tanks and Civil Societies Program at the Lauder Institute of the University of Pennsylvania, we pursued conversations focused on threats posed by populist movements to global institutions.</p>
+            <p>Public uncertainty and distrust of our institutions has demonstrated the need to bring clarity and innovative thinking to global policy making. As a non-partisan, independent think tank, CIGI is positioned as a credible, trustworthy place to find answers.</p>
+            <div><img src="{{ "/assets/MedhoraSignature.png" | relative_url }}" alt="signature"></div>
+            <p class="signature">Rohinton P. Medhora<br>
+              President, CIGI</p>
+          </div>
         </div>
+        <div class="tab" data-id="tab-2" name="chair">
+          {% markdown template_content/slide3-chair.md %}
+          <div class="col">
+            <p><span>T</span>he global economy is increasingly shifting from the delivery of goods and services to an international commerce in ideas and yet policies and incentives have not always kept up with the transition. A new approach to stimulating innovation in Canada and abroad is necessary.</p>
+            <p>Over the past year, CIGI has put a spotlight on this issue, tackling questions around innovation policies and strategies with expertise, analysis and research. CIGI’s “New Thinking on Innovation” series, launched in the spring, breathed new life into discussions and will continue to influence policy in Ottawa and elsewhere.</p>
+            <p>In the series, corporate leaders, economists and trade and international law experts brought perspective and specific policy recommendations for international trade deals, patent systems and intellectual property strategies, and the role global institutions like the Group of Twenty can play in supporting innovation among smaller countries.</p>
+            <p>Among others, we heard from business leaders like Neil Desai and Benjamin Bergen as well as legal experts Michael Geist and new CIGI Senior Fellow E. Richard Gold. In a November 2016 event and through a series of resulting video interviews, Gold also looked beyond technology to the main driver of innovation: people and the societal contexts that foster their successful innovations.</p>
+            <p>CIGI’s responses to constantly evolving issues like innovation represent an organizational approach that builds on research but looks for practical and timely results. Two examples are revealing. Through a partnership with York University, ILRP is working with the IP Osgoode Innovation Clinic to give new entrepreneurs and innovators access to free legal clinics to help them navigate complex, and costly, intellectual property systems.</p>
+            <p>In the policy arena, CIGI responded quickly to the announcement of NAFTA renegotiations by publishing a series of original pieces on NAFTA and the Knowledge Economy. CIGI experts simultaneously participated in discussions with Canadian government officials looking for a road map on trade, innovation and intellectual property under a NAFTA 2.0.</p>
+            <p>Independent, peer-reviewed research accompanied by timely and in-depth analysis, multimedia interviews and explanatory pieces demonstrate CIGI’s commitment to meeting the needs of today’s decision makers while also reaching new audiences.</p>
+            <p>The continued support of our many global and local partners – and especially from the Governments of Canada and Ontario, and the City of Waterloo – is paramount to ensuring CIGI’s ongoing success as a relevant and innovative Canadian think tank with a global perspective.</p>
+            <div><img src="{{ "/assets/BalsillieSignature.png" | relative_url }}" alt="signature"></div>
+            <p class="signature">Jim Balsillie<br>
+              Chair, CIGI Board of Directors</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
