Make timeline filters compact

--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -207,3 +207,12 @@ hr {
 .m-auto {
   margin: auto;
 }
+
+.pv125 {
+  padding-bottom: 0.125rem;
+  padding-top: 0.125rem;
+}
+
+.w12rem {
+  width: 12rem;
+}
