adding image for cover slide, testing transparent background image

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,4 +1,4 @@
-<section class="vh-100 landing slide-1">
+<section class="vh-100 default-background landing slide-1">
   <div class="wrapper h-100">
     <div class="flex flex-column w-100 w-80-m w-40-ns pt4 pt5-m pt6-ns">
     {% markdown template_content/home.md %}
