--- a/_includes/slide3.html
+++ b/_includes/slide3.html
@@ -1,4 +1,4 @@
-<section class="vh-100 joint-message standard-slide" id="slide-3">
+<section class="vh-100 default-background joint-message standard-slide" id="slide-3">
     <div class="wrapper h-100">
         <div class="flex center flex-column w-100 pt5 pt6-ns">
             <div class="tabs" data-slide="slide-3">
