--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -1,4 +1,8 @@
 //Background Images
+
+.cover-slide{
+  background-image: url('../assets/cigi-campus-min.jpg');
+}
 /*
 .slide-1 {
   background-image: url('../assets/cigi-campus-min.jpg');
@@ -87,6 +91,7 @@
   }
 }
 
+
 //Cover Slide
 
 .cover-slide,
@@ -96,8 +101,15 @@
   overflow: hidden;
   position: relative;
 
+  .wrapper{
+    position: relative;
+  }
+
   h1 {
-    padding-bottom: 1rem;
+    font-size: 3rem;
+    line-height: 3.35rem;
+    padding: 0.5rem 0;
+    font-weight: 400;
   }
 
   h3 {
@@ -132,6 +144,7 @@
 
   h1 {
     text-align: center;
+    color: $accent-color;
   }
 
   hr {
@@ -145,15 +158,15 @@
 
 }
 
-// .cover-slide::before,
-// .standard-slide::before {
-//   background: linear-gradient(rgba(242, 240, 234, 0.15), rgba(242, 240, 234, 0.875));
-//   content: ' ';
-//   display: block;
-//   height: 100%;
-//   left: 0;
-//   opacity: 1;
-//   position: absolute;
-//   top: 0;
-//   width: 100%;
-// }
+.cover-slide::before,
+.standard-slide::before {
+  background: linear-gradient(rgba(242, 240, 234, 0.15), rgba(242, 240, 234, 0.875));
+  content: ' ';
+  display: block;
+  height: 100%;
+  left: 0;
+  opacity: 1;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
