--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -19,7 +19,9 @@ layout: compress
       {% include slide7.html %}
       {% include slide8.html %}
       {% include slide9.html %}
-      {% include video.html %}
+      {% include slide10.html %}
+      {% include slide11.html %}
+      {% include slide12.html %}
       {% include gallery.html %}
 
       <script src="{{ site.assets_base_url }}/assets/bundle{{ site.env.HASH }}.js"></script>
