--- a/_includes/slide7.html
+++ b/_includes/slide7.html
@@ -1,8 +1,13 @@
 <section class="vh-100 standard-slide slide-7">
   <div class="wrapper h-100">
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-60-l">
-      {% markdown template_content/slide7.md %}
-      <a href="#" class="no-underline inline-flex items-center br-pill bg-accent-color pv2 ph3 mt3 white dib pointer underline-hover">View Full Article</a>
+      {% markdown template_content/slide7-eurozone.md %}
+      <div class="view-article pb2 pt2">
+          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/laid-low-inside-crisis-overwhelmed-europe-and-imf?source=ar2017" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
+      </div>
+      <div class="lightbox-link">
+          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>Watch a behind-the-scenes account of how the euro-zone crisis caught the IMF off guard</a>
+      </div>
     </div>
   </div>
 </section>
