--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -45,6 +45,7 @@
 .fullscreen-bg-video {
   height: 100%;
   left: 0;
+  object-fit: cover;
   position: absolute;
   top: 0;
   width: 100%;
@@ -83,14 +84,6 @@
   column-count: 2;
   column-width: 450px;
 }
-
-@media (max-aspect-ratio: 16/9) {
-  .fullscreen-bg-video {
-    left: -100%;
-    width: 300%;
-  }
-}
-
 
 //Cover Slide
 
@@ -146,7 +139,7 @@
   }
 }
 
-.cover-slide { 
+.cover-slide {
 
   h1 {
     text-align: center;
