last of the slides to enter

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -22,6 +22,10 @@ layout: compress
       {% include slide10.html %}
       {% include slide11.html %}
       {% include slide12.html %}
+      {% include slide13.html %}
+      {% include slide14.html %}
+      {% include slide15.html %}
+      {% include slide16.html %}
       {% include gallery.html %}
 
       <script src="{{ site.assets_base_url }}/assets/bundle{{ site.env.HASH }}.js"></script>
