--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -3,35 +3,46 @@
 .cover-slide{
   background-image: url('../assets/cigi-campus-min.jpg');
 }
-/*
-.slide-1 {
-  background-image: url('../assets/cigi-campus-min.jpg');
-}
-
-.slide-3 {
-  background-image: url('../assets/UNDRIP-min.jpg');
-}
-
-.slide-4 {
-  background-image: url('../assets/north-of-60-min.jpg');
-}
 
 .slide-5 {
-  background-image: url('../assets/wrc-min.jpg');
-}
+   
+ }
 
-.slide-6 {
-  background-image: url('../assets/blockchain-min.jpg');
-}
+ .slide-6{}
 
-.slide-7 {
-  background-image: url('../assets/IMF-min.jpg');
-}
+ .slide-7{}
 
-.slide-8 {
-  background-image: url('../assets/G20-min.jpg');
-}
-*/
+ .slide-8 {
+   background-image: url('../assets/UNDRIP-min.jpg');
+ }
+
+ .slide-9 {
+   background-image: url('../assets/north-of-60-min.jpg');
+ }
+
+ .slide-10{}
+
+ .slide-11{}
+
+ .slide-12 {
+   background-image: url('../assets/wrc-min.jpg');
+ }
+
+ .slide-13{}
+
+ .slide-14 {
+   background-image: url('../assets/blockchain-min.jpg');
+ }
+
+ .slide-15 {
+   background-image: url('../assets/IMF-min.jpg');
+ }
+
+ .slide-16 {
+   background-image: url('../assets/G20-min.jpg');
+ }
+ 
+
 .fullscreen-bg {
   bottom: 0;
   left: 0;
@@ -159,7 +170,8 @@
 
 .cover-slide::before,
 .standard-slide::before {
-  background: linear-gradient(rgba(242, 240, 234, 0.15), rgba(242, 240, 234, 0.875));
+  //background: linear-gradient(rgba(242, 240, 234, 0.15), rgba(242, 240, 234, 0.875));
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55));
   content: ' ';
   display: block;
   height: 100%;
