link logo in header to cigionline.org

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="site-header" class="site-header wrapper w-100 z-8 flex justify-between items-center" role="banner">
-  <a href="{{ "/" | relative_url }}" class="mv4-ns"><img id="cigi-logo" src="{{ "/assets/CIGI-logo-3x.png" | relative_url }}" alt="CIGI Logo" class="w-5rem-10vh dn db-ns"></a>
+  <a href="{{ "https://www.cigionline.org" }}" class="mv4-ns"><img id="cigi-logo" src="{{ "/assets/CIGI-logo-3x.png" | relative_url }}" alt="CIGI Logo" class="w-5rem-10vh dn db-ns"></a>
   <div class="flex mt3 mt0-ns">
     <div class="f4"><a class="no-underline black" id="global-share-facebook" target="_blank"><i class="fa fa-facebook"></i></a></div>
     <div class="f4 pl1 ml3"><a class="no-underline black" id="global-share-twitter" target="_blank"><i class="fa fa-twitter"></i></a></div>
