--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -91,11 +91,6 @@
   }
 }
 
-.col {
-  column-count: 2;
-  column-width: 450px;
-}
-
 //Cover Slide
 
 .cover-slide,
@@ -148,6 +143,10 @@
   h3 {
     display: none;
   }
+  .col {
+    column-count: 2;
+    column-width: 450px;
+  }
 }
 
 .cover-slide {
@@ -181,3 +180,116 @@
   top: 0;
   width: 100%;
 }
+
+.landing{
+  .wrapper{
+    position: relative;
+  }
+
+  .circle{
+    position: absolute;
+    top: 25%;
+    left: 13%;
+    width: 500px;
+    height: 500px;
+    border-radius: 50%;
+    border: solid 1px rgb(210,211,205);
+
+  }
+  .arc {
+    position: absolute;
+    top: 23%;
+    left: 11%;
+    width: 540px;
+    height: 540px;
+    border: dashed 1px transparent;
+    border-left-color: rgb(120,120,118);
+    border-radius: 50%;
+    transform: rotate(-55deg);
+  }
+  .content-wrapper{
+    z-index: 100;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    width: 80%;
+  }
+  .content{
+    column-count: 2;
+    column-width: 300px;
+  }
+  
+  h1{display: none;}
+  .title{
+    margin-left: 4rem;
+    font-size: 9rem;
+    line-height: 73%;
+    font-weight: 800;
+    color: rgba(120,120,118, 0.85);
+    span{
+      margin-left: -2rem;
+    }
+  }
+
+  .nav{
+    margin: 2rem 0;
+    > div{
+      float: left;
+      .fa{
+        display: block;
+        margin-top: -7px;
+        &:nth-child(1){
+          color: $accent-color;
+        }
+        &:nth-child(2){
+          color: lighten($accent-color, 20%);
+        }
+        &:nth-child(3){
+          color: lighten($accent-color, 40%);
+        }
+      }
+    }
+    .up{
+      margin-right: 10px;
+      margin-top: -3px;
+    }
+    .down{
+      margin-left: 10px;
+      margin-top: 13px;
+    }
+    a{
+      display: block;
+      border-top: solid 1px $grey-color;
+      padding-top: 0.3rem;
+      text-transform: uppercase;
+      color: $accent-color;
+      font-weight: 500;
+      &:hover{
+        color: $grey-color;
+      }
+    }
+    .explore a{
+      border-right: solid 1px $grey-color;
+      padding-right: 1rem;
+    }
+    .view-ar a{
+      padding-left: 1rem;
+    }
+  }
+  @include media-query($on-laptop) {
+    .arc {
+      left: 8%;
+    }
+    .content-wrapper{
+      width: 100%;
+    }
+    .title{
+      margin-left: 2rem;
+      margin-bottom: 1rem;
+    }
+    
+  }
+}
+
+
