--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,8 +1,31 @@
 <section class="vh-100 default-background landing slide-1">
   <div class="wrapper h-100">
-    <div class="flex flex-column w-100 w-80-m w-40-ns pt4 pt5-m pt6-ns">
-    {% markdown template_content/home.md %}
-    
+      <div class="circle"></div>
+      <div class="arc"></div>
+    <div class="content-wrapper">
+        
+        {% markdown template_content/home.md %}
+        <div class="content col">
+            <div class="title">CIGI<br><span>2017</span></div>
+            <div class="intro">Opening with the sensational arrest of IMF Managing Director Dominique Strauss-Kahn, the book reveals that this sordid episode was only one in a series of setbacks for the IMF as financial conflagration spread from Greece to Ireland, Portugal, Spain, Italy and Cyprus — threatening to engulf a region comprising nearly one-fifth of world economic output.</div>
+            <div class="nav">
+                <div class="up">
+                    <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                    <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                    <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                </div>
+                
+              <div class="explore"><a class="no-underline pointer" href="">Explore CIGI</a></div>
+              <div class="view-ar"><a class="no-underline pointer" href="">View Annual Report</a></div>
+              <div class="down">
+                  <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                  <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                  <i class="fa fa-chevron-down" aria-hidden="true"></i>
+              </div>
+              
+            </div>
+        </div>
     </div>
+
   </div>
 </section>
