--- a/_includes/home.html
+++ b/_includes/home.html
@@ -9,18 +9,17 @@
             <div class="title">CIGI<br><span>2017</span></div>
             <div class="intro">Opening with the sensational arrest of IMF Managing Director Dominique Strauss-Kahn, the book reveals that this sordid episode was only one in a series of setbacks for the IMF as financial conflagration spread from Greece to Ireland, Portugal, Spain, Italy and Cyprus — threatening to engulf a region comprising nearly one-fifth of world economic output.</div>
             <div class="nav">
-                <div class="up">
-                    <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                    <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                    <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                <div class="up pointer">
+                    <i class="fa fa-angle-up arrow-3" aria-hidden="true"></i>
+                    <i class="fa fa-angle-up arrow-2" aria-hidden="true"></i>
+                    <i class="fa fa-angle-up arrow-1" aria-hidden="true"></i>
                 </div>
-                
               <div class="explore"><a class="no-underline pointer" href="">Explore CIGI</a></div>
               <div class="view-ar"><a class="no-underline pointer" href="">View Annual Report</a></div>
-              <div class="down">
-                  <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                  <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                  <i class="fa fa-chevron-down" aria-hidden="true"></i>
+              <div class="down pointer">
+                  <i class="fa fa-angle-down arrow-1" aria-hidden="true"></i>
+                  <i class="fa fa-angle-down arrow-2" aria-hidden="true"></i>
+                  <i class="fa fa-angle-down arrow-3" aria-hidden="true"></i>
               </div>
               
             </div>
