--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -245,28 +245,62 @@ header .tabs{
   }
 
   .nav{
-    margin: 2rem 0;
+    margin: 2rem;
+    left: 47%;
+    position: absolute;
+
     > div{
       float: left;
-      .fa{
-        display: block;
-        font-size: 1.75rem;
-        line-height: 1rem;
-        margin-top: -7px;
-        color: $accent-color;
-      }
     }
 
+    a{
+      display: block;
+      float: left;
+      border-top: solid 1px $grey-color;
+      padding-top: 0.3rem;
+      text-transform: uppercase;
+      color: $accent-color;
+      font-weight: 500;
+      &:hover{
+        color: $grey-color;
+      }
+    }
+    .explore, .view-ar{
+      position: relative;
+    }
+    .explore a{
+      border-right: solid 1px $grey-color;
+      padding-right: 1rem;
+    }
+    .view-ar a{
+      padding-left: 1rem;
+    }
+
+    .up, .down{
+      position: absolute;
+    }
     .up{
       margin-right: 10px;
       margin-top: -3px;
+      left: -2rem;
     }
     .down{
       margin-left: 10px;
       margin-top: 13px;
+      right: -2rem;
     }
+
+    .fa{
+      display: block;
+      font-size: 1.75rem;
+      line-height: 1rem;
+      margin-top: -7px;
+      color: $accent-color;
+    }
+
     .arrow-1{
       opacity: 1;
+      transition: opacity .5s ease-in-out;
     }
     .arrow-2{
       opacity: 0;
@@ -275,16 +309,16 @@ header .tabs{
       opacity: 0;
     }
 
-    .up, .down{
+    .explore, .view-ar{
       &:hover{
         .arrow-1{
-          animation: arrow-movement 0.5s ease-in-out;
+          opacity: 0;
         }
         .arrow-2{
           animation: arrow-movement 1s ease-in-out;
         }
         .arrow-3{
-          animation: arrow-movement 2s ease-in-out;
+          animation: arrow-movement 1.5s ease-in-out;
         }
       }
     }
@@ -300,25 +334,8 @@ header .tabs{
       }
     }
     
-    a{
-      display: block;
-      border-top: solid 1px $grey-color;
-      padding-top: 0.3rem;
-      text-transform: uppercase;
-      color: $accent-color;
-      font-weight: 500;
-      &:hover{
-        color: $grey-color;
-      }
-    }
-    .explore a{
-      border-right: solid 1px $grey-color;
-      padding-right: 1rem;
-    }
-    .view-ar a{
-      padding-left: 1rem;
-    }
   }
+
   @include media-query($on-laptop) {
     .arc {
       left: 8%;
