--- a/_includes/home.html
+++ b/_includes/home.html
@@ -3,7 +3,7 @@
       <div class="circle"></div>
       <div class="arc"></div>
     <div class="content-wrapper">
-        
+
         {% markdown template_content/home.md %}
         <div class="content col">
             <div class="title">CIGI<br><span>2017</span></div>
@@ -14,15 +14,15 @@
                     <i class="fa fa-chevron-up" aria-hidden="true"></i>
                     <i class="fa fa-chevron-up" aria-hidden="true"></i>
                 </div>
-                
-              <div class="explore"><a class="no-underline pointer" href="">Explore CIGI</a></div>
-              <div class="view-ar"><a class="no-underline pointer" href="">View Annual Report</a></div>
+
+              <div id="explore-cigi-link" class="explore pointer">Explore CIGI</div>
+              <div id="view-ar-link" class="view-ar pointer">View Annual Report</div>
               <div class="down">
                   <i class="fa fa-chevron-down" aria-hidden="true"></i>
                   <i class="fa fa-chevron-down" aria-hidden="true"></i>
                   <i class="fa fa-chevron-down" aria-hidden="true"></i>
               </div>
-              
+
             </div>
         </div>
     </div>
