--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,7 +8,7 @@ layout: compress
 
   <body>
     {% include header.html %}
-    <div class="smooth-slide-container">
+    <div id="smooth-slide-container">
       {% include timeline.html %}
       {% include home.html %}
       {% include slide2.html %}
